syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";


service WHEvent {
  rpc CreateEvent (CreateEventRequest) returns (WHEventReply);
  rpc GetEventStream (GetEventFilterRequest) returns (stream WHEventReply);
  rpc GetEvents (GetEventFilterRequest) returns (WHEventsReply);
  rpc GetEvent (GetEventRequest) returns (WHEventReply);
  rpc UpdateEvent (UpdateEventRequest) returns (WHEventReply);
  rpc DeleteEvent (DeleteEventRequest) returns (google.protobuf.Empty);
  rpc JoinEvent (JoinEventRequest) returns (google.protobuf.Empty);
  rpc CreateFakeEvent (CreateFakeEventRequest) returns (WHEventReply);
}

message GetEventRequest{
  string id = 1;
}

message JoinEventRequest{
  string id = 1;
}

message WHEventsReply{
	repeated WHEventReply events = 1;
}

message CreateFakeEventRequest{
  string organizerId = 1;
}

message GetEventFilterRequest {
  optional int64 startDateTime = 1;
  optional int64 endDateTime = 2;
  optional string location = 3;
  optional string organizerId = 4;
  uint32 eventType = 5; 
}

message WHEventReply {
  string id = 1;
  string organizerId = 2;
  int64 startDateTime = 3;
  int64 endDateTime = 4;
  string location = 5;
  optional google.protobuf.Int32Value maxGuest = 6;  
  string description = 7;
  uint32 eventType = 8; 
  repeated string guestIds = 9; 
}

message CreateEventRequest {
  int64 startDateTime = 1;
  int64 endDateTime = 2;
  string location = 3;
  uint32 eventType = 4; 
  string description = 5;
  optional int32 maxGuest = 6;  
}

message UpdateEventRequest {
  string id = 1;
  optional int64 startDateTime = 2;
  optional int64 endDateTime = 3;
  optional string location = 4;
  uint32 eventType = 5; 
  optional string description = 8;
  optional int32 maxGuest = 6;  
}

message DeleteEventRequest{
  string id = 1;
}